--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TravelApp</string>
+    <string name="app_feedback_name">Feedback</string>
     <string name="search_hint">Type to search for a location ....</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
